--- a/.env
+++ b/.env
@@ -1,1 +1,18 @@
-PORT=3000
+# Redis config
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password
+# Auth server config
+AUTH_HOST=localhost
+AUTH_PORT=3000
+JWT_SECRET=abcdefghabcdefghabcdefgiabcdefgh
+# Token server config
+TOKEN_HOST=localhost
+TOKEN_PORT=3001
+# Db config
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=auth
+DB_SCHEMA=auth
