--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,51 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis:7-alpine
+    ports: 
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel notice --requirepass redis_password
+    volumes:
+      - ./tmp/redis:/data
+    networks:
+      - lite
+
   db:
-    image: postgres
-  app:
-    container_name: service
+    image: postgres:14-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=auth
+    ports:
+      - 5432:5432
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - lite
+
+  tokensvc:
+    container_name: token-service
+    build:
+      context: .
+      dockerfile: Dockerfile.local
+    env_file:
+      - ./.env
+    environment:
+      - REDIS_HOST=redis
+    ports:
+      - 3001:3001
+    command: "gow -c -r=false -e=go,mod run cmd/main.go token"
+    volumes:
+      - .:/go/src/app
+    depends_on:
+      - db
+    networks:
+      - lite
+
+  authsvc:
+    container_name: auth-service
     build:
       context: .
       dockerfile: Dockerfile.local
@@ -12,6 +53,18 @@ services:
       - .:/go/src/app
     env_file: 
       - ./.env
+    environment:
+      - REDIS_HOST=redis
+      - DB_HOST=db
     ports:
-      - $PORT:$PORT
-    command: "gow -c -r=false -e=go,mod run cmd/server.go"
+      - 3000:3000
+    command: "gow -c -r=false -e=go,mod run cmd/main.go auth"
+    depends_on:
+      - db
+      - tokensvc
+    networks:
+      - lite
+
+networks:
+  lite:
+    driver: bridge
