--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -15,7 +15,7 @@ exec:
 # Where should any generated models go?
 model:
   filename: graph/model/models_gen.go
-  package: graphmodel
+  package: model_gen
 
 # Where should the resolver implementations go?
 resolver:
